deployment/k8s/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: spring-api
          image: h3rv3/spring-boot-mysql:0.0.1
          imagePullPolicy: Always
      imagePullSecrets:
        - name: docker-hub
