deployment/k8s/api/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: api-service
          servicePort: 8080
